--- a/src/main/resources/templates/elenco_ristoranti.html
+++ b/src/main/resources/templates/elenco_ristoranti.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Elenco Ristoranti</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <!--<script language="javascript" src="js/gestisciRistoranti.js" >-->
+  <script language="javascript" src="js/gestioneRistoranti.js" >
   </script>
 </head>
 <body>
